2001-11-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e20.el (w3m-make-ccl-coding-system): Copied from w3m-fsf.el;
	don't call `make-coding-system' if a coding-system already exists.
	* w3m-e21.el (w3m-make-ccl-coding-system): Moved from w3m-fsf.el.
	* w3m-fsf.el (w3m-make-ccl-coding-system): Moved to w3m-e21.el.

2001-11-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-quick-start): New option.
	(w3m-input-url): When the default string is equal to nil, it is
	not displayed in the prompt.
	(w3m): Refer `w3m-quick-start' to decide the action when
	interactively called.

2001-11-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-current-title, w3m-current-url): Define them before
	loading the version specific modules.

2001-11-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
	Committed by Katsumi Yamaoka  <yamaoka@jpl.org>.

	* w3m-xmas.el (format-buffers-tab-line): Protect aginst errors
	caused by the illegal type of `w3m-current-url'.

2001-11-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-vinelinux.el: Changed the coding system of this file
	to iso-2022-7bit.

	* w3m.el (emacs-w3m-version): Incremted to 1.2.1rc1.

	* w3m-xmas.el (top): Define `w3m-current-title' to avoid
	byte-compile warnings.
	(format-buffers-tab-line): Cleanup.

2001-11-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (format-buffers-tab-line): Don't use the value of
	`w3m-current-title' if it is nil.

2001-11-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-exec-filter): Modify regexp pattern of "Wrong
	username or passwd".

2001-11-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.2.
	(top): Protect against the error occurs when `w3m-ucs.el' isn't
	found.

2001-11-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-asahi.el (shimbun-get-headers): Skip top article.

2001-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-index-url, shimbun-get-headers):